--- a/Site/htdocs/assets/css/TriTrypDB.css
+++ b/Site/htdocs/assets/css/TriTrypDB.css
@@ -507,7 +507,7 @@ height: 240px;
 	text-align: left;
 	width: 16em;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
+	font-size: 14px;
 	background-color: #FFFFFF;
 	background-image: url(../images/dropdownmenu.jpg);
 	background-repeat: repeat-x;
@@ -522,7 +522,7 @@ height: 240px;
 
 #menu ul ul a:link, #menu ul ul a:visited{
 	left:100%;
-	width: 14em;
+	width: 15em;
 	color: #414141;
 	font-weight: normal;
 	padding: 6px 6px 6px 6px;
@@ -532,8 +532,7 @@ height: 240px;
 
 #menu ul ul a:hover, #menu ul ul a:active{
 	left:100%;
-	margin-left: -2px;
-	width: 12em;
+	width: 14em;
 	color: #0276be;
 	font-weight: normal;
 	background-color: #FFFFFF;
